package db;
message AddReq {
  required string key = 1;
  required bytes val = 2;
}
message AddRes {
  optional string err = 1;
}

message GetReq {
  required string key = 1;
}
message GetRes {
  required bytes val = 1;
}
